Crude first implemenattion if R&M API, presentation

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,1 +1,12 @@
 @import "bootstrap/scss/bootstrap.scss";
+
+body { background-color: #d1eaff; }
+
+.character-profile {
+
+  img {
+    width: 64px;
+    height: 64px;
+  }
+
+}
