--- a/templates/locations/list.html.twig
+++ b/templates/locations/list.html.twig
@@ -4,13 +4,22 @@
 
 {% block content %}
     {% for dimension, locations in locationsByDimension %}
-        <h2>{{ dimension }}</h2>
-        <ul>
+        <h3 class="mt-4">{{ dimension }}</h3>
+        <div class="row g-2">
             {% for location in locations %}
-                <li>
-                    <a href="{{ path('locations_details', {id: location.id}) }}">{{ location.name }}</a>
-                </li>
+                <div class="col-sm-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ location.name }}</h5>
+                            <h6 class="card-subtitle mb-2 text-body-secondary">{{ location.type }}</h6>
+                            <p class="card-text">
+                                Residents: {{ location.residentUrls | length }}
+                            </p>
+                            <a href="{{ path('locations_details', {id: location.id}) }}" class="card-link">Details</a>
+                        </div>
+                    </div>
+                </div>
             {% endfor %}
-        </ul>
+        </div>
     {% endfor %}
 {% endblock %}
